[gd_scene load_steps=5 format=3 uid="uid://cnnm0042hf5qk"]

[ext_resource type="Script" path="res://src/main/chat/ui/chat-line-label.gd" id="1"]
[ext_resource type="FontFile" uid="uid://djvi5vhe42qcp" path="res://assets/main/ui/font/blogger-sans-medium.otf" id="1_nsepq"]
[ext_resource type="AudioStream" uid="uid://ch6nyivc3ndm7" path="res://assets/main/chat/ui/bebebe.wav" id="2"]
[ext_resource type="Script" path="res://src/main/chat/ui/label-typer.gd" id="4"]

[node name="ChatLineLabel" type="Label"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -40.0
offset_right = 180.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.25098, 0.25098, 0.376471, 1)
theme_override_fonts/font = ExtResource("1_nsepq")
theme_override_font_sizes/font_size = 36
text = "Hello"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
max_lines_visible = 2
visible_characters_behavior = 1
script = ExtResource("1")

[node name="LabelTyper" type="Node" parent="."]
script = ExtResource("4")

[node name="BebebeSound" type="AudioStreamPlayer" parent="LabelTyper"]
stream = ExtResource("2")
volume_db = -12.0
bus = &"Sound Bus"

[connection signal="all_text_shown" from="LabelTyper" to="." method="_on_LabelTyper_all_text_shown"]
